[metadata]
name = scheduledexecutor
version = 0.0.2.dev0
author = YoungTae Seok
author_email = delegacy@gmail.com
description = scheduledexecutor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delegacy/scheduledexecutor
project_urls =
    Bug Tracker = https://github.com/delegacy/scheduledexecutor/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.7
packages = find:

[isort]
profile = black
